# inference-engine-node

./: .clang-format  .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  core  package-lock.json  package.json
doc/: api.md  coding_style.md
example/: index.html  package-lock.json  package.json  renderer.js
example/common/: classification.js  index.js  object_detection.js
example/face_detaction_node/: .gitignore  README.md  main.js  package-lock.json  package.json
example/face_detaction_node/engines/: engine.js  faceDetectionEngine.js  faceDetectionRetailEngine.js
example/hello_classification_electron/: .gitignore  README.md  base.js  index.html  main.js  package-lock.json  package.json  renderer.js  ui.js  utils.js
example/hello_classification_electron/static/css/: style.css
example/hello_classification_electron/static/lib/: stats.customized.min.js
example/hello_classification_node/: README.md  main.js  package-lock.json  package.json
example/hello_object_detection_ssd_node/: README.md  box.js  main.js  package-lock.json  package.json
example/hello_version_electron/: renderer.js
include/: blob.h  core.h  executable_network.h  infer_request.h  input_info.h  network.h  output_info.h  preprocess_channel.h  preprocess_info.h  utils.h
lib/: ie.js  inference-engine-node.js
lib/src/: index.js
lib/src/post_processing/: classification.js  index.js  object_detection.js
lib/src/pre_processing/: index.js
models/mobilenetssd/FP16/: mobilenetssd.xml
models/mobilinetssd/FP32/: mobilenetssd.xml
models/squeezenet1.1/FP16/: squeezenet1.1.mapping  squeezenet1.1.xml
src/: IECore.cc  IECore.h  binding.cc  blob.cc  blob.h  core.cc  core.h  execnetwork.cc  execnetwork.h  executable_network.cc  executable_network.h  ie_backend.cc  ie_backend.h  ie_binding.cc  infer_request.cc  infer_request.h  input_info.cc  input_info.h  network.cc  network.h  output_info.cc  output_info.h  preprocess_channel.cc  preprocess_info.cc  preprocess_info.h  utils.cc  utils.h
test/: core.js  exec_network.js  executable_network.js  inference_engine.js  network.js  pre_processing.js  version.js
test/data/: simple.xml
